# CI-CD-Pipeline-Optimization

./: README.md
Meta x Scalar/: README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
Meta x Scalar/agents/: baseline_agent.py
Meta x Scalar/config/: openenv.yaml
Meta x Scalar/env/: environment.py
Meta x Scalar/server/: app.py
Meta x Scalar/tasks/: easy.py  hard.py  medium.py
Meta x Scalar/templates/: index.html
Meta x Scalar/tests/: test_env.py
