[project]
name = "cicd-pipeline-env"
version = "1.0.0"
description = "CI/CD Pipeline Optimization Environment using OpenEnv"
authors = [
    {name = "Nayan Patil"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pyyaml"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"