[project]
name = "cicd-pipeline-env"
version = "1.0.0"
description = "CI/CD Pipeline Optimization Environment"
authors = [
    {name = "Nayan Patil"}
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pyyaml",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
